chore(broker): update EMQX version and basic config

--- a/broker/emqx/docker-compose.yml
+++ b/broker/emqx/docker-compose.yml
@@ -4,8 +4,42 @@ services:
     container_name: emqx
     restart: always
     ports:
-      - "1883:1883"
-      - "18083:18083"
+      # EMQX Dashboard (bind to localhost only; remove 127.0.0.1 to allow remote access)
+      - "127.0.0.1:18083:18083"
+
+      # MQTTS (MQTT over TLS)
+      - "8883:8883"
+
     volumes:
+      # Persist EMQX data and logs on the host
       - ./data:/opt/emqx/data
       - ./log:/opt/emqx/log
+
+      # Mount local TLS certificates into the container
+      - ./certs:/opt/emqx/certs
+
+    environment:
+      # ----------------------------
+      # TLS Listener Configuration
+      # ----------------------------
+      # Bind TLS listener to port 8883
+      EMQX_LISTENERS__SSL__DEFAULT__BIND: "8883"
+
+      # TLS certificate paths inside the container
+      EMQX_LISTENERS__SSL__DEFAULT__SSL_OPTIONS__CACERTFILE: "/opt/emqx/certs/ca.pem"
+      EMQX_LISTENERS__SSL__DEFAULT__SSL_OPTIONS__CERTFILE: "/opt/emqx/certs/server.pem"
+      EMQX_LISTENERS__SSL__DEFAULT__SSL_OPTIONS__KEYFILE: "/opt/emqx/certs/server.key"
+
+      # ----------------------------
+      # mTLS (Mutual TLS) Enforcement
+      # ----------------------------
+      # Require the broker to verify client certificates
+      EMQX_LISTENERS__SSL__DEFAULT__SSL_OPTIONS__VERIFY: "verify_peer"
+      # Reject connections if the client does not present a certificate
+      EMQX_LISTENERS__SSL__DEFAULT__SSL_OPTIONS__FAIL_IF_NO_PEER_CERT: "true"
+
+      # ----------------------------
+      # Authentication Hardening (Optional)
+      # ----------------------------
+      # Disable anonymous access (recommended when using mTLS)
+      EMQX_ALLOW_ANONYMOUS: "false"
