feat(esphome): complete secrets template with API keys and MQTT

--- a/esphome/secrets.example.yaml
+++ b/esphome/secrets.example.yaml
@@ -1,5 +1,5 @@
 # Example secrets for ESPHome.
-# Copy to secrets.yaml (this file is gitignored).
+# Copy to secrets.yaml (this file is gitignored by esphome/.gitignore).
 
 # Wi-Fi
 wifi_ssid: "YOUR_WIFI_SSID"
@@ -7,3 +7,14 @@ wifi_password: "YOUR_WIFI_PASSWORD"
 
 # OTA
 ota_password: "CHANGE_ME"
+
+# Native API encryption key (32-byte base64 in ESPHome)
+api_encryption_key: "CHANGE_ME_BASE64"
+
+# MQTT broker (mTLS)
+mqtt_broker: "mqtt.example.com"
+mqtt_port: 8883
+
+mqtt_ca_cert: "CHANGE_ME_PEM"
+mqtt_client_cert: "CHANGE_ME_PEM"
+mqtt_client_key: "CHANGE_ME_PEM"
