--- a/esphome/esp32.yaml
+++ b/esphome/esp32.yaml
@@ -16,7 +16,7 @@ ota:
 # 2. Native API
 api:
   encryption:
-    key: !secret api_encryption_key
+    key: !secret api_key_esp32
 
 wifi:
   ssid: !secret wifi_ssid
