--- a/sensors/brokers.example.yml
+++ b/sensors/brokers.example.yml
@@ -18,9 +18,9 @@
   # [Key] mTLS certificate paths (relative to this file)
   # If using one-way TLS, only ca_file is required.
   # If using mTLS (mutual TLS), all three fields below are required.
-  ca_file: "./certs/ca.pem"
-  cert_file: "./certs/client.pem"
-  key_file: "./certs/client.key"
+  ca_file: "./certs/ca/ca.pem"
+  cert_file: "./certs/client/client.pem"
+  key_file: "./certs/client/client.key"
 
   tls_insecure: false
 
