chore: 调整 gitignore 仅忽略私钥
- 不再整目录忽略 certs/\n- 仅排除 *.key / *.p12 / *.pfx，允许提交公钥证书 PEM

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@ sensors/*.secrets.*
 
 # Docker
 *.log
-certs/
+# Certificates
+# Allow committing public certs/CA bundles if you want, but always ignore private keys.
+*.key
+*.p12
+*.pfx
 docs/
 tests/
