remove esphome docker

--- a/homeassistant/docker-compose.yml
+++ b/homeassistant/docker-compose.yml
@@ -3,25 +3,9 @@ services:
     container_name: home-assistant
     image: ghcr.io/home-assistant/home-assistant:stable
     volumes:
-      - ./config_ha:/config
+      - ./config:/config
     restart: unless-stopped
     ports:
       - "127.0.0.1:8123:8123"   # maping second port for another instance
     environment:
       - TZ=Europe/Prague
-    networks:
-      - smarthome-net
-  esphome:
-    container_name: esphome
-    image: esphome/esphome:latest
-    restart: always
-    ports:
-      - "127.0.0.1:6052:6052"
-    volumes:
-      - ./config_esphome:/config
-      - /etc/localtime:/etc/localtime:ro
-    networks:
-      - smarthome-net
-networks:
-  smarthome-net:
-    driver: bridge
