--- a/.gitignore
+++ b/.gitignore
@@ -32,35 +32,13 @@ esphome/secrets.yaml
 *.key
 *.p12
 *.pfx
-*key*.pem
-*private*.pem
-
+*.crt
+*.pem
+docs/
+tests/
 # Local TLS material (keep documentation only)
 certs/**
 !certs/README
 sensors/certs/
 
-# LaTeX build artifacts
-*.aux
-*.bbl
-*.bcf
-*.blg
-*.fdb_latexmk
-*.fls
-*.lof
-*.lot
-*.out
-*.run.xml
-*.synctex.gz
-*.toc
-
-# Specific thesis build output (keep sources + images, ignore generated PDF)
-docs/BT/CTU_FEL_THESIS/thesis-final.pdf
-
-# Docs: keep sources, avoid committing heavy/binary and third-party materials
-docs/BT/论文/
-docs/BT/*.pdf
-docs/BT/*.doc
-docs/BT/*.docx
-docs/BT/*.zip
-doc
+docs/BT
