--- a/.gitignore
+++ b/.gitignore
@@ -34,11 +34,12 @@ esphome/secrets.yaml
 *.pfx
 *.crt
 *.pem
-docs/
-tests/
+
 # Local TLS material (keep documentation only)
 certs/**
 !certs/README
 sensors/certs/
 
-docs/BT
+# Docs: keep only docs/README tracked
+docs/**
+!docs/README
