--- a/esphome/esp32.yaml
+++ b/esphome/esp32.yaml
@@ -1,19 +1,26 @@
 esphome:
   name: smarthome-esp32
-  friendly_name: "Environment Node ESP32(Node B)"
+  friendly_name: "Environment Node ESP32 (Node B)"
 
 esp32:
   board: esp32doit-devkit-v1
   framework:
     type: esp-idf
+    sdkconfig_options:
+      # ECDSA P-256 for certificate signatures
+      CONFIG_MBEDTLS_ECP_DP_SECP256R1_ENABLED: "y"
+      CONFIG_MBEDTLS_KEY_EXCHANGE_ECDHE_ECDSA_ENABLED: "y"
+      CONFIG_MBEDTLS_ECDSA_DETERMINISTIC: "y"
+      # X25519 for key exchange
+      CONFIG_MBEDTLS_ECP_DP_CURVE25519_ENABLED: "y"
+      CONFIG_MBEDTLS_KEY_EXCHANGE_ECDHE_RSA_ENABLED: "y"
+      # TLS 1.3 support
+      CONFIG_MBEDTLS_SSL_PROTO_TLS1_3: "y"
 
-
-# 1. 开启 OTA
 ota:
   - platform: esphome
     password: !secret ota_password
 
-# 2. Native API
 api:
   encryption:
     key: !secret api_key_esp32
@@ -23,12 +30,9 @@ wifi:
   password: !secret wifi_password
   fast_connect: true
 
-# 3. MQTT 配置
 mqtt:
   broker: !secret mqtt_broker
   port: !secret mqtt_port
-  
-  # 引用 secrets.yaml 里的证书
   certificate_authority: !secret mqtt_ca_cert
   client_certificate: !secret mqtt_client_cert
   client_certificate_key: !secret mqtt_client_key
@@ -36,14 +40,12 @@ mqtt:
 logger:
   level: DEBUG
 
-# --- I2C 总线配置 ---
 i2c:
   sda: GPIO33
   scl: GPIO32
   scan: true
   id: bus_b
 
-# --- 补光灯控制 (TCS34725 LED) ---
 switch:
   - platform: gpio
     pin: GPIO25
@@ -51,30 +53,30 @@ switch:
     id: tcs_led
 
 sensor:
-  # 1. TCS34725 颜色传感器
+  # TCS34725 color sensor
   - platform: tcs34725
     i2c_id: bus_b
     red_channel: { name: "RGB Red" }
     green_channel: { name: "RGB Green" }
     blue_channel: { name: "RGB Blue" }
     illuminance: { name: "Ambient Lux" }
+    color_temperature: { name: "Color Temperature" }
     gain: 4x
     integration_time: 24ms
     update_interval: 1s
 
-  # 2. MQ-2 烟雾传感器
+  # MQ-2 gas sensor (ADC)
   - platform: adc
     pin: GPIO34
     name: "Smoke Concentration"
-    update_interval: 0.1s
+    update_interval: 0.2s
     attenuation: 12db
     accuracy_decimals: 3
     filters:
       - sliding_window_moving_average:
-          window_size: 5
-          send_every: 2
-      - delta: 0.005
-    # 本地联动逻辑：烟雾过大 -> 红灯闪烁
+          window_size: 3
+          send_every: 1
+      - delta: 0.01
     on_value_range:
       - above: 2.5
         then:
@@ -84,32 +86,28 @@ sensor:
               green: 0%
               blue: 0%
               effect: "Pulse"
-      # (可选) 增加一个恢复正常的逻辑：低于 2.5 关灯
       - below: 2.4
         then:
           - light.turn_off: status_light
 
 binary_sensor:
-  # 3. SR602 人体传感器
+  # SR602 PIR motion sensor
   - platform: gpio
     pin: GPIO23
     name: "Motion Detected"
     device_class: motion
-    # 本地联动逻辑：有人经过 -> 绿灯亮
     on_press:
       then:
         - light.turn_on:
             id: status_light
-            red: 0%
-            green: 100%
-            blue: 0%
-    # (可选) 没人时延迟关灯
+            red: 30%
+            green: 50%
+            blue: 70%
     on_release:
       then:
         - delay: 5s
         - light.turn_off: status_light
 
-# --- RGB 灯光控制 ---
 light:
   - platform: rgb
     name: "Status Indicator"
