docs: fix broken links and factual errors in READMEs
- Rename certs/README to certs/README.md for GitHub compatibility
- Update all relative links to use .md extension
- Fix citation year 2026 → 2025
- Remove unverified '10,000+ devices' claim (tested: 5000)
- Correct thesis title in sensors/README
- Update docs/README with accurate Makefile commands
- Fix template link to actual Overleaf source
- Remove inaccurate deployment instructions from certs/README
- Update .gitignore to track certs/README.md

--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,8 @@ esphome/secrets.yaml
 
 # Local TLS material (keep documentation only)
 certs/**
-!certs/README
+!certs/README.md
+!certs/README.zh-CN.md
 sensors/certs/
 
 # Docs: keep only docs/README tracked
