feat(tools): add PDF to Markdown converter with caching
- pymupdf4llm-based PDF converter for LLM consumption
- Download PDFs from URLs or convert local files
- MD5-based caching to skip unchanged files
- urls.txt and working dirs git-ignored

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@ sensors/certs/
 
 # Docs: keep only docs/README tracked
 docs/BT/
+
+# PDF converter working files
+docs/pdf2md/input/
+docs/pdf2md/output/
+docs/pdf2md/urls.txt
+docs/pdf2md/.cache.json
