--- a/esphome/secrets.example.yaml
+++ b/esphome/secrets.example.yaml
@@ -1,8 +1,11 @@
 # ESPHome secrets template
 # Copy to secrets.yaml and replace placeholder values
 
-wifi_ssid: "YOUR_WIFI_SSID"
-wifi_password: "YOUR_WIFI_PASSWORD"
+wifi_ssid_main: "YOUR_MAIN_WIFI_SSID"
+wifi_password_main: "YOUR_MAIN_WIFI_PASSWORD"
+wifi_ssid_backup: "YOUR_BACKUP_WIFI_SSID"
+wifi_password_backup: "YOUR_BACKUP_WIFI_PASSWORD"
+wifi_ssid_ap_password: "YOUR_AP_WIFI_PASSWORD"
 
 ota_password: "YOUR_OTA_PASSWORD"
 
