--- a/esphome/esp32.yaml
+++ b/esphome/esp32.yaml
@@ -21,14 +21,16 @@ ota:
   - platform: esphome
     password: !secret ota_password
 
+# 2. Native API
 api:
   encryption:
     key: !secret api_key_esp32
+  reboot_timeout: 0s
 
 wifi:
   # 全局设置
   fast_connect: true
-  
+  reboot_timeout: 15min  
   # 定义多个网络列表
   networks:
     # --- 主网络 (优先连接) ---
@@ -39,19 +41,39 @@ wifi:
     # --- 备用网络 (主网络连不上时使用) ---
     - ssid: !secret wifi_ssid_backup
       password: !secret wifi_password_backup
-      priority: 10  # 优先级较低
+      priority: 10  
+
+    # [优先级 3] Eduroam (CTU 学校网络)
+    - ssid: "eduroam"
+      priority: 15
+      eap:
+        # 必须填完整的账号，不能只填 yuanweiz
+        identity: !secret eduroam_email
+        # 引用 secrets.yaml 里的密码
+        password: !secret eduroam_password
 
   # 可选：如果两个都连不上，开启热点(AP)模式方便急救
   ap:
     ssid: "ESP32-AP"
     password: !secret wifi_ssid_ap_password
 
+# 3. MQTT 配置
 mqtt:
   broker: !secret mqtt_broker
   port: !secret mqtt_port
+  discovery: true
+  discovery_prefix: homeasistant 
+  reboot_timeout: 5min
+  # 引用 secrets.yaml 里的证书
   certificate_authority: !secret mqtt_ca_cert
   client_certificate: !secret mqtt_client_cert
   client_certificate_key: !secret mqtt_client_key
+
+button:
+  # 这是一个专门走 MQTT 的重启按钮
+  - platform: restart
+    name: "Emergency Restart(Force via MQTT)"
+    id: mqtt_restart_btn
 
 logger:
   level: DEBUG
