--- a/esphome/esp32.yaml
+++ b/esphome/esp32.yaml
@@ -91,6 +91,16 @@ switch:
     id: tcs_led
 
 sensor:
+    # --- 1. 网络与系统状态 ---
+  - platform: wifi_signal
+    name: "WiFi RSSI"
+    id: wifi_rssi
+    unit_of_measurement: "dBm"
+    update_interval: 10s
+
+  - platform: uptime
+    name: "System Uptime"
+    unit_of_measurement: "s"
   # TCS34725 color sensor
   - platform: tcs34725
     i2c_id: bus_b
