--- a/esphome/esp32s3.yaml
+++ b/esphome/esp32s3.yaml
@@ -93,15 +93,15 @@ i2c:
   frequency: 100kHz
 
 sensor:
-  # Network diagnostics
+  # --- 1. 网络与系统状态 ---
   - platform: wifi_signal
-    name: "WiFi RSSI"
+    name: "WiFi RSSI ESP32S3"
     id: wifi_rssi
     unit_of_measurement: "dBm"
     update_interval: 10s
 
   - platform: uptime
-    name: "System Uptime"
+    name: "System Uptime ESP32S3"
     unit_of_measurement: "s"
 
   # MPU6050 6-axis IMU
