fix: use apt-get instead of apk in texlive container

--- a/.github/workflows/thesis_ci.yml
+++ b/.github/workflows/thesis_ci.yml
@@ -19,7 +19,7 @@ jobs:
         uses: docker://texlive/texlive:latest
         with:
           entrypoint: /bin/sh
-          args: -c "apk add --no-cache make && cd docs/BT/CTU_FEL_THESIS && make pdf"
+          args: -c "apt-get update && apt-get install -y make && cd docs/BT/CTU_FEL_THESIS && make pdf"
           
       - name: Rename Output
         run: |
