fix: add workflow file to trigger paths

--- a/.github/workflows/thesis_ci.yml
+++ b/.github/workflows/thesis_ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
       - 'docs/BT/CTU_FEL_THESIS/**'
+      - '.github/workflows/thesis_ci.yml'
 
 permissions:
   contents: write
