--- a/.github/workflows/thesis_ci.yml
+++ b/.github/workflows/thesis_ci.yml
@@ -28,11 +28,16 @@ jobs:
           cd docs/BT/CTU_FEL_THESIS
           # The makefile produces $(BASENAME)_v$(VERSION).pdf - use sort -V for version sorting
           PDF_FILE=$(find . -maxdepth 1 -name "bachelor_thesis_Yuan_v*.pdf" | sort -V | tail -n 1)
-          BUILD_DATE=$(date +%Y-%m-%d)
-          OUTPUT_NAME="袁伟泽_本科毕业论文_${BUILD_DATE}.pdf"
+          # European date format: DD-MM-YYYY
+          BUILD_DATE=$(date +%d-%m-%Y)
+          OUTPUT_NAME="Yuan_Weize_Bachelor_Thesis_${BUILD_DATE}.pdf"
+          TAG_NAME="thesis-${BUILD_DATE}"
+          RELEASE_NAME="Thesis Build ${BUILD_DATE}"
           if [ -n "$PDF_FILE" ]; then
             cp "$PDF_FILE" "$GITHUB_WORKSPACE/${OUTPUT_NAME}"
             echo "OUTPUT_NAME=${OUTPUT_NAME}" >> $GITHUB_ENV
+            echo "TAG_NAME=${TAG_NAME}" >> $GITHUB_ENV
+            echo "RELEASE_NAME=${RELEASE_NAME}" >> $GITHUB_ENV
             echo "Found and moved $PDF_FILE to ${OUTPUT_NAME}"
           else
             echo "No PDF found!"
@@ -44,9 +49,9 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: thesis-latest
-          name: Latest Thesis Build
+          tag_name: ${{ env.TAG_NAME }}
+          name: ${{ env.RELEASE_NAME }}
           files: ${{ env.OUTPUT_NAME }}
           draft: false
           prerelease: false
-          make_latest: false
+          make_latest: true
