ci: auto-save latest thesis PDF to docs/BT/ and update README links

--- a/.github/workflows/thesis_ci.yml
+++ b/.github/workflows/thesis_ci.yml
@@ -56,4 +56,20 @@ jobs:
           files: ${{ env.OUTPUT_NAME }}
           draft: false
           prerelease: false
-          make_latest: true
+          make_latest: false
+
+      - name: Commit Latest PDF
+        env:
+          OUTPUT_NAME: ${{ env.OUTPUT_NAME }}
+        run: |
+          # Copy the compiled PDF to docs/BT/bachelor_thesis_latest.pdf
+          LATEST_PDF="docs/BT/bachelor_thesis_latest.pdf"
+          cp "$OUTPUT_NAME" "$LATEST_PDF"
+          
+          # Commit and push
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add "$LATEST_PDF"
+          # Use [skip ci] to prevent infinite loop, though path filter should also prevent it
+          git commit -m "docs: auto-update latest thesis PDF [skip ci]" || echo "No changes to commit"
+          git push
