--- a/.github/workflows/thesis_ci.yml
+++ b/.github/workflows/thesis_ci.yml
@@ -65,40 +65,26 @@ jobs:
         run: |
           # 1. Setup paths
           DEST_DIR="docs/BT"
-          DEST_FILE="${DEST_DIR}/${OUTPUT_NAME}"
+          FIXED_FILENAME="Yuan_Weize_Bachelor_Thesis_latest.pdf"
+          DEST_FILE="${DEST_DIR}/${FIXED_FILENAME}"
           
           # 2. Configure Git
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           
           # 3. Clean up old thesis PDFs in docs/BT/ (exclude other files)
-          # Assuming format: Yuan_Weize_Bachelor_Thesis_*.pdf or bachelor_thesis_latest.pdf
-          find "$DEST_DIR" -maxdepth 1 -name "Yuan_Weize_Bachelor_Thesis_*.pdf" -delete
-          find "$DEST_DIR" -maxdepth 1 -name "bachelor_thesis_latest.pdf" -delete
+          # We remove any previous dynamic filenames to keep it clean
+          find "$DEST_DIR" -maxdepth 1 -name "Yuan_Weize_Bachelor_Thesis_v*.pdf" -delete
+          # We also remove the target file to ensure clean copy (though cp overwrites)
+          rm -f "$DEST_FILE"
           
-          # 4. Copy new PDF
+          # 4. Copy new PDF to fixed filename
           cp "$OUTPUT_NAME" "$DEST_FILE"
           
-          # 5. Update README links using sed
-          # Root READMEs: docs/BT/filename
-          sed -i "s|docs/BT/bachelor_thesis_.*\.pdf|docs/BT/${OUTPUT_NAME}|g" README.md
-          sed -i "s|docs/BT/bachelor_thesis_.*\.pdf|docs/BT/${OUTPUT_NAME}|g" README.zh-CN.md
-          
-          # Docs READMEs: BT/filename (Previously ../BT/..., fixing that too if present)
-          # Fix potential relative path error from previous manual edit if it exists
-          sed -i "s|\.\./BT/bachelor_thesis_.*\.pdf|BT/${OUTPUT_NAME}|g" docs/README.md || true
-          sed -i "s|\.\./BT/bachelor_thesis_.*\.pdf|BT/${OUTPUT_NAME}|g" docs/README.zh-CN.md || true
-          # Standard update
-          sed -i "s|BT/bachelor_thesis_.*\.pdf|BT/${OUTPUT_NAME}|g" docs/README.md
-          sed -i "s|BT/bachelor_thesis_.*\.pdf|BT/${OUTPUT_NAME}|g" docs/README.zh-CN.md
-          
-          # Also update logic to support replacing the specific 'Yuan_Weize...' name in future runs
-          sed -i "s|docs/BT/Yuan_Weize_Bachelor_Thesis_.*\.pdf|docs/BT/${OUTPUT_NAME}|g" README.md
-          sed -i "s|docs/BT/Yuan_Weize_Bachelor_Thesis_.*\.pdf|docs/BT/${OUTPUT_NAME}|g" README.zh-CN.md
-          sed -i "s|BT/Yuan_Weize_Bachelor_Thesis_.*\.pdf|BT/${OUTPUT_NAME}|g" docs/README.md
-          sed -i "s|BT/Yuan_Weize_Bachelor_Thesis_.*\.pdf|BT/${OUTPUT_NAME}|g" docs/README.zh-CN.md
-
-          # 6. Commit and Push
-          git add -f "$DEST_FILE" README.md README.zh-CN.md docs/README.md docs/README.zh-CN.md
-          git commit -m "docs: update thesis PDF to ${OUTPUT_NAME} and refresh links [skip ci]" || echo "No changes to commit"
+          # 5. Commit and Push
+          # We only need to add the PDF file now, as READMEs are static
+          git add -f "$DEST_FILE"
+          # Also stage deletions of old files
+          git add -u "$DEST_DIR"
+          git commit -m "docs: update latest thesis PDF [skip ci]" || echo "No changes to commit"
           git push
